# python-nlp100

./: ch1.ipynb  ch2.ipynb  ch3.ipynb  ch4.ipynb  ch5.ipynb  ch6.ipynb  pyproject.toml  setup.sh
