[project]
name = "python-nlp100"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "polars>=1.15.0",
    "requests>=2.32.3",
    "sentence-transformers>=3.3.1",
]
